--- a/_config.yml
+++ b/_config.yml
@@ -24,11 +24,11 @@ sass:
 # Build settings
 compress-site: yes
 
-encoding: "utf-8"
-compress_html: # - http://jch.penibelst.de/
-  clippings: all
-  ignore:
-    envs: development
+#encoding: "utf-8"
+#compress_html: # - http://jch.penibelst.de/
+#  clippings: all
+#  ignore:
+#    envs: development
 
 # Development Settings
 port: 4000
