--- a/_config.yml
+++ b/_config.yml
@@ -17,12 +17,12 @@ color-1: '#E64C3C'
 color-2: '#F0C419'
 
 # Sass/SCSS
-sass:
-  sass_dir: _sass
-  style: compressed # http://sass-lang.com/documentation/file.SASS_REFERENCE.html#output_style
+#sass:
+#  sass_dir: _sass
+#  style: compressed # http://sass-lang.com/documentation/file.SASS_REFERENCE.html#output_style
 
 # Build settings
-compress-site: yes
+#compress-site: yes
 
 #encoding: "utf-8"
 #compress_html: # - http://jch.penibelst.de/
