--- a/_config.yml
+++ b/_config.yml
@@ -2,33 +2,33 @@
 
 # Site Settings
 title: Introduction
-#url: 'http://webjeda.com'
-#baseurl: '/online-cv' #change it according to your repository name
-#description: A beautiful Jekyll theme for creating resume
+url: 'http://webjeda.com'
+baseurl: '/online-cv' #change it according to your repository name
+description: A beautiful Jekyll theme for creating resume
 # Style will be applied only after restarting the build or serve. Just choose one of the options.
-#theme_skin: gray # blue turquoise green berry orange ceramic
-#chrome_mobile_color: #use hex colors (ex:#1976d2) or leave empty if you don't want a color for chrome mobile searchbar
+theme_skin: gray # blue turquoise green berry orange ceramic
+chrome_mobile_color: #use hex colors (ex:#1976d2) or leave empty if you don't want a color for chrome mobile searchbar
 
 # Tracker
-#analytics: UA-83979019-1
+analytics: UA-83979019-1
 
 #color scheme
 color-1: '#E64C3C'
 color-2: '#F0C419'
 
 # Sass/SCSS
-#sass:
-#  sass_dir: _sass
-#  style: compressed # http://sass-lang.com/documentation/file.SASS_REFERENCE.html#output_style
+sass:
+sass_dir: _sass
+style: compressed # http://sass-lang.com/documentation/file.SASS_REFERENCE.html#output_style
 
 # Build settings
-#compress-site: yes
+compress-site: yes
 
-#encoding: "utf-8"
-#compress_html: # - http://jch.penibelst.de/
-#  clippings: all
-#  ignore:
-#    envs: development
+encoding: "utf-8"
+compress_html: # - http://jch.penibelst.de/
+clippings: all
+ignore:
+envs: development
 
 # Development Settings
 port: 4000
